package org.proyecto.sav.model;

//enum que representa los metodos disponibles para realizar un pago.
public enum PaymentMethod {

    //pago con tarjeta de credito o debito
    TARJETA,

    //pago en efectivo
    EFECTIVO,

    //pago por transferencia bancaria
    TRANSFERENCIA
}