package org.proyecto.sav.model;

public enum ReservationStatus {

    PENDIENTE,

    CONFIRMADA,

    CANCELADA,

    FINALIZADA
}
