package org.proyecto.sav.model;

public enum VehicleStatus {
    DISPONIBLE,
    ALQUILADO,
    EN_MANTENIMIENTO
}
